<resources>
    <string name="app_name">DataCard</string>
    <string name="secondName">Фамилия</string>
    <string name="dataBirthday">День рожденья</string>
    <string name="save">Сохранить</string>
    <string name="firstNameTV">Имя</string>
    <string name="age">Возраст</string>
    <string name="exit">Exit</string>
    <string name="formatDataBirthday">dd MM yyyy</string>
    <string name="title_left_until_birthday">До дня рождения осталось</string>
</resources>